Bitonic Sort/Merge_bitonic/x64/Release/Merge_bitonic.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.39.33519\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DNDEBUG -D_CONSOLE -D_UNICODE -DUNICODE -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o "C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic\x64\Release\kernel.cu.obj" "C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic\kernel.cu" 
C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic\kernel.cu(219): error : identifier "MergeSortGPU" is undefined
                MergeSortGPU << <threadsPerBlock, blocksPerGrid >> > (gpuArrmerge, gpuTemp, size, wid * 2);
                ^
  
C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic\kernel.cu(232): error : identifier "mergeSortCPU" is undefined
            mergeSortCPU(carr, temp, 0, size - 1);
            ^
  
  2 errors detected in the compilation of "C:/Users/Windows 11/source/repos/Whoops/Bitonic Sort/Merge_bitonic/kernel.cu".
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.3.targets(799,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.39.33519\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.3\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DNDEBUG -D_CONSOLE -D_UNICODE -DUNICODE -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o "C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic\x64\Release\kernel.cu.obj" "C:\Users\Windows 11\source\repos\Whoops\Bitonic Sort\Merge_bitonic\kernel.cu"" exited with code 2.
